Remove && !defined(__ANDROID__) to fix https://bugs.swift.org/browse/SR-5059